source/kleep/static/kleep/style.css
/* ... */
/* Medium and big screens */
@media only screen and (min-width: 841px) {
    .low-res-only {
        display: none !important;
    }

    #logo {
        float: left;
        padding: 5px 20px 0 0;
    }

    #mobile-hamburger {
        display: none;
    }

    #navigation a {
        text-align: center;
    }

    #navigation > div {
        flex-direction: row;
    }

    #navigation > div > a {
        margin-right: calc(2% + 10px);
    }

    #navigation-close-button {
        float: left;
    }

    #breadcrumbs {
        font-size: 1.0em;
        font-weight: bold;
        overflow: hidden;
    }

    #breadcrumbs a {
        text-decoration: none;
        outline: none;
        display: block;
        float: left;
        line-height: 37px;
        padding: 0 10px 0 30px;
        position: relative;
    }

    #breadcrumbs a:after {
        content: '';
        position: absolute;
        top: 0;
        right: -18px;
        width: 36px;
        height: 36px;
        transform: scale(0.707) rotate(45deg);
        z-index: 1;
        border-radius: 0 5px 0 50px;
    }

    #side, #side-extra {
        width: calc(100% - 4px);
        padding: 20px 0;
    }

    #overlay-prompt {
        margin: 10% auto auto;
        padding: 20px 50px;
        width: 350px;
        border-radius: 15px;
    }

    #overlay-prompt > form input[type=text], #overlay-prompt input[type=password] {
        width: 100%;
    }

}

/* Small or medium screens */
@media only screen and (max-width: 1200px) {
    #navigation {
        padding: 0 10px;
        font-size: 1.0em;
    }

    #navigation > div > a {
        margin-right: 10px;
    }

    #navigation a {
        margin-right: 15px;
        line-height: 30px;
        margin-top: 5px;
    }

}

/* Small screens */
@media only screen and (max-width: 840px) {
    .high-res-only {
        display: none !important;
    }

    #wrapper {
        overflow-x: hidden;
    }

    #header {
        padding: 5px 10px;
        height: auto;
        overflow: hidden;
        display: flex;
        justify-content: space-between;
    }

    #mobile-hamburger {
        display: inline-block;
        font-size: 30px;
        border: 1px solid rgba(55, 55, 55, 0.5);
        border-radius: 5px;
        float: left;
        width: 44px;
        height: 44px;
    }

    #logo {
        padding: 0;
    }

    #logo img {
        height: 40px;
    }

    #pre-navigation > li {
        font-size: 1.0em;
        border-width: 0 1px;
        padding: 0;
        margin-right: 10px;
        line-height: 50px;
        transition: background-color 0.5s;
        transform: skewx(0deg);
    }

    #pre-navigation > li > a {
        display: block;
        transform: skewx(0deg);
    }

    #pre-navigation {
        display: none;
        position: absolute;
        z-index: 2;
        top: 80px;
        left: 5px;
        border-radius: 4px;
        height: auto !important;
    }

    #pre-navigation > span {
        position: absolute;
        top: -18px;
        left: 10px;
        border-left: 20px solid transparent;
        border-right: 20px solid transparent;
        width: 0;
        height: 0;
    }

    #pre-navigation > li {
        display: block;
        width: 100%;
        height: auto;
        margin: 5px 0;
        border-left: 0;
        border-right: 0;
    }

    #auth {
        float: left;
        padding: 0;
    }

    #logout-button {
        display: inline-block;
        font-size: 30px;
        text-align: center;
        width: 40px;
        height: 40px;
        padding: 0;
    }

    #navigation > div {
        flex-wrap: wrap;
        flex-direction: column;
        font-size: 1.5em;
    }

    #navigation > div .svg-inline--fa {
        font-size: 1.5em;
        margin-right: 10px;
    }

    #navigation > div > a {
        padding: 8px 10px;
        text-align: left;
    }

    #navigation > div > a > br {
        display: none;
    }

    #navigation-close-button {
        width: 100%;
        font-size: 2.5em;
    }

    #breadcrumbs {
        display: none;
    }

    #middle {
        margin-top: 0;
        padding: 0;
        width: calc(100% + 240px);
        flex-wrap: nowrap;
        height: 100%;
        left: -250px;
        position: relative;
        transition: 0.5s;
    }

    #side-container {
        width: 240px;
        overflow: hidden;
        margin: 0;
        transition: 0.5s;
    }

    #side, #side-extra {
        border: none;
        border-radius: 0;
    }

    #side-menu-trigger {
        display: block;
        position: absolute;
        line-height: 75vh;
        font-size: 32px;
        height: 100%;
        width: 30px;
    }

    #side-menu-trigger-wrapper {
        width: 30px;
        flex-shrink: 0;
        min-height: 100%;
    }

    #content, #content-large {
        border-radius: unset;
        border: none;
        padding: 0;
        height: 100%;
    }

    #content-large {
        width: calc(100% - 30px);
        margin-left: 260px;
    }

    #footer {
        width: 96%;
        padding: 0 2%;
    }

    #footer > ul > li {
        padding: 0 5px;
        font-weight: 600;
    }

    #overlay-prompt {
        padding: 20px;
        width: calc(100% - 40px);
    }

    #overlay-prompt > form input[type=text], #overlay-prompt input[type=password] {
        width: 90%;
    }

    .flex-wrapper { /* Override the default, to center items on mobile */
        justify-content: space-around !important;
    }
}

